--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Viet Y</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -102,7 +102,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>27 December 2000</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span> <a href="https://viety2000.github.io">viety2000.github.io</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>0976967581</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Thu Duc City, Ho Chi Minh City</span></li>
                 </ul>
@@ -111,7 +111,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Engineering</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>nguyenviety2000@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Resume:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Resume:</strong> <span><a href="assets/resume/NguyenVietY_FresherEmbedded.pdf" download>Download</a></span></li>
                 </ul>
               </div>
             </div>
