--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
               <li>Developed control features by handling JSON message requests from clients
                 through the data channel, including functionalities for Pan-Tilt, Playlist querying,
                 and downloading records from the SD Card.</li>
+              <li>Build kernel, rootfs using Realtek SDK (base on Buildroot platform) and deploy it on camera board.</li>
             </ul>
           </p>
 
